force-app/main/default/objects/Frequency__c/Frequency__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Frequency</label>
</CustomObject>