force-app/main/default/objects/Frequency__c/fields/Chemical_Minus_Days__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Minus_Days__c</fullName>
    <label>Chemical Minus Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>