force-app/main/default/objects/Frequency__c/fields/Chemical_Reschedule_Plus_Days__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Reschedule_Plus_Days__c</fullName>
    <label>Chemical Reschedule Plus Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>