force-app/main/default/objects/Frequency__c/fields/Evaluation_Priority__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Priority__c</fullName>
    <label>Evaluation Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>