force-app/main/default/objects/Frequency__c/fields/Hygiene_Minus_Days__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Minus_Days__c</fullName>
    <label>Hygiene Minus Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>