force-app/main/default/objects/Frequency__c/fields/Life_Safety_Plus_Days__c.field-meta.xml
<CustomField>
    <fullName>Life_Safety_Plus_Days__c</fullName>
    <label>Life Safety Plus Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>