force-app/main/default/objects/Frequency__c/fields/Occurrences_In_Year__c.field-meta.xml
<CustomField>
    <fullName>Occurrences_In_Year__c</fullName>
    <label>Occurrences In Year</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>