force-app/main/default/objects/Frequency__c/fields/Pest_Plus_Days__c.field-meta.xml
<CustomField>
    <fullName>Pest_Plus_Days__c</fullName>
    <label>Pest Plus Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>