force-app/main/default/objects/Frequency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Occurrences_In_Year__c</columns>
    <columns>Hygiene_Plus_Days__c</columns>
    <columns>Hygiene_Minus_Days__c</columns>
    <columns>Chemical_Plus_Days__c</columns>
    <columns>Chemical_Minus_Days__c</columns>
    <columns>Life_Safety_Plus_Days__c</columns>
    <columns>Life_Safety_Minus_Days__c</columns>
    <columns>Pest_Plus_Days__c</columns>
    <columns>Pest_Minus_Days__c</columns>
    <columns>Discount_Percent__c</columns>
    <columns>Chemical_Reschedule_Plus_Days__c</columns>
    <columns>Hygiene_Reschedule_Plus_Days__c</columns>
    <columns>Life_Safety_Reschedule_Plus_Days__c</columns>
    <columns>Pest_Reschedule_Plus_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>